[gd_scene load_steps=3 format=3 uid="uid://bjb7frhypfech"]

[ext_resource type="Script" path="res://scripts/main/audio_manager.gd" id="1_ybhav"]
[ext_resource type="AudioStream" uid="uid://epn7w26l0klu" path="res://assets/main/TOASTED.ogg" id="2_18nft"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_ybhav")

[node name="SpeechPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Voice"

[node name="SongPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Song"

[node name="CancelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_18nft")
bus = &"Voice"

[connection signal="finished" from="SpeechPlayer" to="." method="_on_speech_player_finished"]
[connection signal="finished" from="SongPlayer" to="." method="_on_song_player_finished"]
